🗃 Chnaged to MongoDB

--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@
 
 RATE=60000
 PORT=2019
-MONGO_URI=test
+MONGO_URI=mongodb+srv://express:expressApp@cluster0.fyawa.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_USER=express
+MONGO_PWD=expressApp
 DOC_LINK=https://URL
 
 #firebase variables
